<resources>

    <string name="app_name"> Lab 3a </string>

    <string name="title"> Лабораторна робота 3а </string>
    <string name="description"> Дослідження генетичного алгоритму </string>

    <string name="input_a_hint"> a </string>
    <string name="input_b_hint"> b </string>
    <string name="input_c_hint"> c </string>
    <string name="input_d_hint"> d </string>

    <string name="input_y_hint"> Y </string>

    <string name="x1"> X1 </string>
    <string name="x2"> X2 </string>
    <string name="x3"> X3 </string>
    <string name="x4"> X4 </string>

    <string name="plus"> + </string>

    <string name="equal"> = </string>

    <string name="button_count"> Обчислити </string>

    <string name="count_with_different_fractions"> Обчислити з різними відсотками мутації </string>

</resources>
